--- a/p2/vagrantfile
+++ b/p2/vagrantfile
@@ -2,7 +2,8 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "generic/alpine319"
+  config.vm.box = "bento/debian-13"
+
 
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
@@ -16,8 +17,11 @@ Vagrant.configure("2") do |config|
 
     
     server.vm.provision "shell", inline: <<-SHELL
-      apk add --no-cache curl iptables ip6tables
-      
+      apt-get update
+      apt-get install -y curl iptables ip6tables net-tools
+
+      echo 'export PATH=$PATH:/usr/sbin' >> /home/vagrant/.bashrc
+
       curl -sfL https://get.k3s.io | sh -s - server \
         --node-ip=192.168.56.110 \
         --flannel-iface=eth1 \
